--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".fragments.Activities.SplashActivity"></activity>
-        <activity android:name=".activities.SplashActivity">
+        <activity android:name=".fragments.Activities.WelcomeActivity"></activity>
+        <activity android:name=".fragments.Activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity"></activity>
+        <activity android:name=".fragments.Activities.MainActivity"></activity>
     </application>
 
 </manifest>
